--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Cross-platform desktop version of swagger-editor",
   "main": "./main/main.js",
   "scripts": {
-    "postinstall": "gulp postinstall",
+    "postinstall": "postinstall-build editorSrc",
     "start": "cross-env NODE_ENV=development electron --inspect main.js",
     "clean": "gulp clean",
     "build": "cross-env NODE_ENV=production gulp"
+  },
+  "bin": {
+    "swagger-editor-offline": "bin/swagger-editor-offline.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +29,6 @@
   "devDependencies": {
     "cross-env": "^5.0.5",
     "del": "^3.0.0",
-    "electron": "^1.7.9",
     "electron-builder": "^19.36.0",
     "electron-load-devtool": "^0.5.1",
     "envify": "^4.1.0",
@@ -34,10 +36,12 @@
     "gulp-envify": "^1.0.0",
     "gulp-string-replace": "^0.4.0",
     "gulp-uglify": "^3.0.0",
-    "npm-run-all": "^4.1.1"
+    "npm-run-all": "^4.1.1",
+    "swagger-editor-dist": "^3.1.16"
   },
   "dependencies": {
-    "swagger-editor-dist": "^3.1.16"
+    "electron": "^1.7.9",
+    "postinstall-build": "^5.0.1"
   },
   "electronDependencies": {}
 }
