--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "cross-env NODE_ENV=production gulp",
     "pack:dir": "electron-builder --projectDir electron --dir",
     "pack": "electron-builder --projectDir electron",
+    "release:prepare": "npm version patch -m \"Release: %s\"",
     "release": "npm-run-all clean build \"pack -- {@}\" --"
   },
   "bin": {
