--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,6 @@ deploy:
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
 
-branches:
-  except:
-    - "/^v\\d+\\.\\d+\\.\\d+$/"
+#branches:
+#  except:
+#    - "/^v\\d+\\.\\d+\\.\\d+$/"
