Use electron-builder to auto publish to GitHub

--- a/electron/electron-builder.yml
+++ b/electron/electron-builder.yml
@@ -10,8 +10,7 @@ directories:
   app: app
 
 publish:
-  - provider: generic
-    url: https://gitlab.com
+  - provider: github
     
 dmg:
   contents:
