--- a/package.json
+++ b/package.json
@@ -32,23 +32,25 @@
   },
   "homepage": "https://github.com/XuluWarrior/swagger-editor-offline",
   "devDependencies": {
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.1",
     "del": "^3.0.0",
-    "electron-builder": "^19.36.0",
+    "electron-builder": "^19.46.4",
     "electron-load-devtool": "^0.5.1",
     "envify": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-envify": "^1.0.0",
     "gulp-string-replace": "^0.4.0",
     "gulp-uglify": "^3.0.0",
-    "npm-run-all": "^4.1.1",
-    "swagger-editor-dist": "^3.1.16"
+    "npm-run-all": "^4.1.2",
+    "swagger-editor-dist": "^3.1.17"
   },
   "dependencies": {
     "electron": "^1.7.9",
+    "electron-updater": "^2.16.1",
     "postinstall-build": "^5.0.1"
   },
   "electronDependencies": {
+    "electron-updater": "^2.16.1",
     "postinstall-build": "^5.0.1"
   }
 }
