--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.3.4",
+    "swagger-editor": "^4.13.1",
     "swagger-editor-dist": "^4.13.1"
   },
   "devDependencies": {
