Use @ladjs/gulp-envify gulp-envify depends on tomashanacek/loose-envify which no longer exists

--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
   },
   "homepage": "https://github.com/XuluWarrior/swagger-editor-offline",
   "devDependencies": {
+    "@ladjs/gulp-envify": "2.0.1",
     "cross-env": "^5.1.1",
     "del": "^3.0.0",
     "electron-builder": "^19.55.2",
     "electron-load-devtool": "^0.5.1",
     "envify": "^4.1.0",
     "gulp": "^3.9.1",
-    "gulp-envify": "^1.0.0",
     "gulp-string-replace": "^0.4.0",
     "gulp-uglify": "^3.0.0",
     "npm-run-all": "^4.1.2",
