--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,8 @@ cache:
 script:
   - |
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+      # Clear TRAVIS_CMD as it will be multi-line which breaks --env-file
+      export TRAVIS_CMD=
       docker run --rm \
         --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
         -v ${PWD}:/project \
