--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ cache:
 
 script:
   - |
+    npm run typecheck
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
       # Clear TRAVIS_CMD as it will be multi-line which breaks --env-file
       export TRAVIS_CMD=
@@ -33,9 +34,9 @@ script:
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-        /bin/bash -c "npm run release -- --windows --linux"
+        /bin/bash -c "npm run build:linux; npm run build:win"
     else
-      npm run release
+      npm run build:mac
     fi
 
 deploy:
