--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,9 @@ jobs:
 
       - name: build-linux
         if: matrix.os == 'ubuntu-latest'
-        run: npm run build:linux
+        run: |
+          sudo snap install snapcraft --classic
+          npm run build:linux
 
       - name: build-mac
         if: matrix.os == 'macos-latest'
