--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "electron-updater": "^6.3.4",
     "is-json": "^2.0.1",
     "js-yaml": "^4.1.0",
+    "phin": "^3.7.1",
     "swagger-editor-dist": "^4.13.1"
   },
   "devDependencies": {
